@@ -18,23 +18,20 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import java.util.stream.Collectors;
 
-import org.bson.BsonDocument;
 import org.eclipse.ditto.internal.utils.akka.AkkaClassLoader;
 import org.eclipse.ditto.internal.utils.config.DefaultScopedConfig;
 import org.eclipse.ditto.internal.utils.metrics.instruments.timer.StartedTimer;
 import org.eclipse.ditto.thingsearch.service.common.config.DittoSearchConfig;
 import org.eclipse.ditto.thingsearch.service.common.config.SearchConfig;
 import org.eclipse.ditto.thingsearch.service.persistence.write.model.AbstractWriteModel;
+import org.eclipse.ditto.thingsearch.service.updater.actors.MongoWriteModel;
 import org.slf4j.Logger;
-
-import com.mongodb.client.model.WriteModel;
 
 import akka.NotUsed;
 import akka.actor.AbstractExtensionId;
 import akka.actor.ActorSystem;
 import akka.actor.ExtendedActorSystem;
 import akka.actor.Extension;
-import akka.japi.Pair;
 import akka.stream.javadsl.Source;
 
 /**
@@ -60,8 +57,7 @@ public abstract class SearchUpdateMapper implements Extension {
      * @param writeModels the write models.
      * @return Ditto write models together with their processed MongoDB write models.
      */
-    public abstract Source<List<Pair<AbstractWriteModel, WriteModel<BsonDocument>>>, NotUsed>
-    processWriteModels(final List<AbstractWriteModel> writeModels);
+    public abstract Source<List<MongoWriteModel>, NotUsed> processWriteModels(List<AbstractWriteModel> writeModels);
 
     /**
      * Load a {@code SearchUpdateListener} dynamically according to the search configuration.
@@ -81,7 +77,7 @@ public abstract class SearchUpdateMapper implements Extension {
      * @return a singleton list of write model together with its update document, or an empty list if there is no
      * change.
      */
-    protected static CompletionStage<List<Pair<AbstractWriteModel, WriteModel<BsonDocument>>>>
+    protected static CompletionStage<List<MongoWriteModel>>
     toIncrementalMongo(final AbstractWriteModel model, final Logger logger) {
 
         return model.toIncrementalMongo()
@@ -89,12 +85,13 @@ public abstract class SearchUpdateMapper implements Extension {
                     if (mongoWriteModelOpt.isEmpty()) {
                         logger.debug("Write model is unchanged, skipping update: <{}>", model);
                         model.getMetadata().sendWeakAck(null);
-                        return List.<Pair<AbstractWriteModel, WriteModel<BsonDocument>>>of();
+                        model.getMetadata().sendBulkWriteCompleteToOrigin(null);
+                        return List.<MongoWriteModel>of();
                     } else {
                         ConsistencyLag.startS5MongoBulkWrite(model.getMetadata());
                         final var result = mongoWriteModelOpt.orElseThrow();
                         logger.debug("MongoWriteModel={}", result);
-                        return List.of(Pair.create(model, result));
+                        return List.of(result);
                     }
                 })
                 .handle((result, error) -> {
@@ -119,13 +116,13 @@ public abstract class SearchUpdateMapper implements Extension {
      * @param logger the logger.
      * @return a list of write models together with their update documents.
      */
-    protected static CompletionStage<List<Pair<AbstractWriteModel, WriteModel<BsonDocument>>>> toIncrementalMongo(
+    protected static CompletionStage<List<MongoWriteModel>> toIncrementalMongo(
             final Collection<AbstractWriteModel> models, final Logger logger) {
 
         final var writeModelFutures = models.stream()
                 .map(model -> toIncrementalMongo(model, logger))
                 .map(CompletionStage::toCompletableFuture)
-                .collect(Collectors.toList());
+                .toList();
 
         final var allFutures = CompletableFuture.allOf(writeModelFutures.toArray(CompletableFuture[]::new));
         return allFutures.thenApply(aVoid ->
